# 3dconnexion-rubik-cube

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  build_debug  build_debug.bat  configure  run  run.bat
include/cube/: cube.h  cube.hpp  main_handler.hpp  piece.h  util.h
include/gl/: buffer.hpp  data.hpp  error.hpp  shader.hpp  texture.hpp
include/gl/camera/: abstract_camera.hpp  centered_camera.hpp  direction.hpp  fps_camera.hpp  moving_status.hpp  turn.hpp
include/gl/mesh/: index.hpp  mesh.hpp  obj_loader.hpp
include/gl/model/: indexed_model.hpp  model.hpp  model_factory.hpp  obj_model_factory.hpp  obj_model_loader.hpp
include/gl/picking/: aabb.hpp  ray.hpp
include/gl/shader/: loader.hpp  program.hpp  shader.hpp
include/gl/texture/: loader.hpp  texture.hpp
include/gl/timer/: fps_capper.hpp  timer.hpp
include/gl/window/: abstract_window.hpp  mouse.hpp  window.hpp  window_handler.hpp
include/logging/: level.hpp  logging.hpp  output.hpp
include/util/: optional.hpp  preconditions.hpp  util.hpp
include/util/io/: stream_matcher.hpp
resources/: fragment.frag  uvmap.dds  vertex.vert
src/: CMakeLists.txt
src/cube/: CMakeLists.txt  cube.cpp  main.cpp  main_handler.cpp  piece.cpp  util.cpp
src/embedfile/: CMakeLists.txt  embedfile.cpp
src/gl/: CMakeLists.txt  error.cpp  shader.cpp  texture.cpp
src/gl/camera/: abstract_camera.cpp  centered_camera.cpp  fps_camera.cpp
src/gl/mesh/: index.cpp  mesh.cpp  obj_loader.cpp
src/gl/model/: indexed_model.cpp  model.cpp  obj_model_factory.cpp  obj_model_loader.cpp
src/gl/picking/: ray.cpp
src/gl/shader/: loader.cpp  program.cpp  shader.cpp
src/gl/texture/: loader.cpp  texture.cpp
src/gl/window/: abstract_window.cpp  window.cpp
src/logging/: CMakeLists.txt  logging.cpp
test/: CMakeLists.txt  preconditions_test.cpp  runner.cpp
test/logging/: logging_test.cpp
